Leave just one section for the content

--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,17 @@
   <header>
     <nav>
       <ul id="nav-list">
-        <li class="nav-items"></li>
-        <li class="nav-items"></li>
-        <li class="nav-items"></li>
+        <li class="nav-items">Home</li>
+        <li class="nav-items">Menu</li>
+        <li class="nav-items">Contact</li>
       </ul>
     </nav>
   </header>
-  <section id="home-section">
-
-  </section>
-  <section id="menu-section">
-
-  </section>
-  <section id="contact-section">
+  <section id="main-section">
 
   </section>
   <footer>
-    
+
   </footer>
 </body>
 </html>
