Added the information of the footer

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   </section>
   <footer>
-
+    <p>Background image by <a href="https://www.freepik.es/vector-gratis/plantilla-postal-japonesa-acuarela_9979199.htm#query=japan&position=3&from_view=search&track=sph" target="_blank" rel="noopener"> pikisuperstar</a> in Freepik</p>
   </footer>
 </body>
 </html>
