Add a class to the first li element

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <header>
     <nav>
       <ul id="nav-list">
-        <li class="nav-items">Home</li>
+        <li class="nav-items active">Home</li>
         <li class="nav-items">Menu</li>
         <li class="nav-items">Contact</li>
       </ul>
